--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: PHPUnit
 on: [push, pull_request]
 
 env:
-  SWOOLE_VERSION: '4.6.2'
+  SWOOLE_VERSION: '4.6.3'
   SWOW_VERSION: 'develop'
 
 jobs:
@@ -56,7 +56,7 @@ jobs:
           sudo sh -c "echo extension=swow > /etc/php/${{ matrix.php-version }}/cli/conf.d/swow.ini"
           php --ri swow
       - name: Setup Packages
-        run: composer update -o --no-scripts
+        run: composer update -o
       - name: Run Test Cases
         run: |
           composer analyse
