--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
         "hyperf/amqp": "^2.0",
+        "hyperf/async-queue": "^2.0",
         "hyperf/redis": "^2.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
@@ -35,6 +36,8 @@
         "symfony/var-dumper": "^5.1"
     },
     "suggests": {
+        "hyperf/amqp": "Required to use AMQP facade. (^2.0)",
+        "hyperf/async-queue": "Required to use async queue facade. (^2.0)",
         "hyperf/redis": "Required to use redis facade. (^2.0)"
     },
     "minimum-stability": "dev",
