--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "friendsofphp/php-cs-fixer": "^2.14",
         "hyperf/amqp": "^2.0",
         "hyperf/async-queue": "^2.0",
+        "hyperf/cache": "^2.0",
         "hyperf/redis": "^2.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
@@ -38,7 +39,8 @@
     "suggests": {
         "hyperf/amqp": "Required to use AMQP facade. (^2.0)",
         "hyperf/async-queue": "Required to use async queue facade. (^2.0)",
-        "hyperf/redis": "Required to use redis facade. (^2.0)"
+        "hyperf/redis": "Required to use redis facade. (^2.0)",
+        "hyperf/cache": "Required to use cache facade. (^2.0)"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
