--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "hyperf/amqp": "^2.0",
         "hyperf/async-queue": "^2.0",
         "hyperf/cache": "^2.0",
+        "hyperf/config": "^2.0",
         "hyperf/redis": "^2.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
