--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "hyperf/async-queue": "^2.0",
         "hyperf/cache": "^2.0",
         "hyperf/config": "^2.0",
+        "hyperf/di": "^2.0",
         "hyperf/redis": "^2.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
