--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,8 @@
         "hyperf/config": "^2.0",
         "hyperf/di": "^2.0",
         "hyperf/event": "^2.0",
+        "hyperf/filesystem": "^2.0",
+        "hyperf/logger": "^2.0",
         "hyperf/redis": "^2.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
@@ -46,7 +48,9 @@
         "hyperf/cache": "Required to use cache facade. (^2.0)",
         "hyperf/config": "Required to use config facade. (^2.0)",
         "hyperf/di": "Required to use di or app facade. (^2.0)",
-        "hyperf/event": "Required to use event dispatcher facade. (^2.0)"
+        "hyperf/event": "Required to use event dispatcher facade. (^2.0)",
+        "hyperf/filesystem": "Required to use filesystem facade. (^2.0)",
+        "hyperf/logger": "Required to use log facade. (^2.0)"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
