--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "hyperf/logger": "^2.0",
         "hyperf/nsq": "^2.0",
         "hyperf/redis": "^2.0",
+        "hyperf/session": "^2.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": ">=7.0",
@@ -52,7 +53,8 @@
         "hyperf/event": "Required to use event dispatcher facade. (^2.0)",
         "hyperf/filesystem": "Required to use filesystem facade. (^2.0)",
         "hyperf/logger": "Required to use log facade. (^2.0)",
-        "hyperf/nsq": "Required to use nsq facade. (^2.0)"
+        "hyperf/nsq": "Required to use nsq facade. (^2.0)",
+        "hyperf/session": "Required to use session facade. (^2.0)"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
